--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
               data-aos-delay="3200">
                 <p class="txt__upper">Hello 👋</p>
                 <h1 class="txt"><span>SOK</span> TAHU</span></h1>
-                <h2 class="txt__under">Produk by Xl-DKV 1 💻</h2>
+                <h2 class="txt__under">Brand by Xl-DKV 1 💻</h2>
                 <p class="desc">Sok Tahu merupakan salah satu usaha mikro kecil dan menengah (UMKM) yang ada di Indonesia. Sesuai dengan tujuan didirikannya usaha ini, Sok Tahu ingin mengangkat kembali citra tahu sebagai makanan tradisional khas Indonesia yang sangat digemari banyak orang dan juga dapat memberikan suasana baru dengan menambahkan kandungan susu pada tahu.
                 </p>
                 <div class="soclinks">
