--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     <div class="card__content">
                         <h4><b>Tahu Susu</b></h4>
                         <p>Tahu susu atau dadih adalah produk tahu susu yang diperoleh dari proses curdling susu dengan rennet atau asam seperti lemon juice atau cuka dan kemudian menghilangkan bagian cairnya.</p>
-                        <a href="https://id.wikipedia.org/wiki/Tahu_susu"><button class="cardBtn" type="button">Info lebih lanjut --></button></a>
+                        <a href="https://katadata.co.id/muchamadnafi/berita/634e6f313b802/proses-dan-cara-membuat-tahu-susu-yang-gurih"><button class="cardBtn" type="button">Info lebih lanjut --></button></a>
                     </div>
                 </div>
                 <div class="card"
