--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         data-aos="zoom-in"
         data-aos-delay="200"
         data-aos-duration="900"
-        data-aos-offset="0">Made with ❤️ by XI-DKV 1 </div>
+        data-aos-offset="0">Made with <a href="https://www.instagram.com/zfarrrr_/?igshid=OGQ5ZDc2ODk2ZA%3D%3D">❤️</a> by XI-DKV 1 </div>
     </footer>
 
     <script src="index.js"></script>
